Bug 739575 - Prioritize click-to-play over alternate content in nsObjectLoadingContent::GetPluginSupport. r=josh